--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@ body {
   line-height: 1.6;
 }
 
+/* html{
+  font-size: 65.5%;
+} */
+
 /*-----------------------------------------------------
   Navigation Bar
 ------------------------------------------------------*/
